fix: overflow of GitHub Stars count button (#1311)

--- a/src/components/GitHubStarButton/index.css
+++ b/src/components/GitHubStarButton/index.css
@@ -2,7 +2,6 @@
     height: 20px;
     overflow: hidden;
 
-    margin-left: 20px;
     overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
     font-size: 11px;
