--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -29,17 +29,13 @@
   }
 }
 
-.githubStars {
-  border: none;
-  margin-left: 24px;
-  overflow: hidden;
-}
-
 .buttons {
   padding: 1rem 0;
   display: flex;
   align-items: center;
   text-transform: uppercase;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .getStarted {
